# validate-python-headers

./: .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  action.yml  entrypoint.sh  pyproject.toml  supported-licenses.json  validate_headers.py
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  collect_env.py  dependabot.yml  labeler.yml  license-notice.txt  verify_deps_sync.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build.yml  builds.yml  pr-edited.yml  push.yml  style.yml  tests.yml
src/: supported-licenses.json  validate_headers.py
